--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,17 @@ body {
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #e6ecf0;
+    /* background-color: #e6ecf0;  */
+    background-image: url('../img/orage.gif');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    height: 100%;
+    width: 100%;
 }
 
 .navbar {
-    background-color: #F6B427;
+    background-color:#1864ab;
     width: 100%;
     height: 50px;
 }
@@ -37,6 +43,11 @@ input {
     padding: 14px 16px;
     text-decoration: none;
 }
+
+input[type=search]:focus {
+    background-color: lightblue;
+  }
+
 button {
     float: left;
     display: block;
@@ -51,11 +62,14 @@ button {
     /* width: 100vw; */
     /* height: 100vh; */
     overflow: hidden;
-    color: coral;
+    color: black;
     /* background-color: darkblue; */
-    background-color: whitesmoke;
-
-    
+    /* background-color: whitesmoke; */
+    background-image: url('../img/orage.gif');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    height: 100%;
 }
 
 .mainbody {
@@ -72,7 +86,7 @@ button {
     width: 23%;
     float: left;
     height: 300px;
-    background-color: #C63272;
+    background-color:#4dabf7;
 }
 
 .col2 {
@@ -80,14 +94,14 @@ button {
     margin-left: 2%;
     float: left;
     height: auto;
-    background-color: whitesmoke;
+    background-color: #e7f5ff;
 }
 
 .col3 {
     width: 23%;
     float: right;
     height: 300px;
-    background-color: #B8E1D9;
+    background-color:#4dabf7;
 }
 
 
@@ -100,11 +114,11 @@ img {
 }
 
 .sondage1 {
-    background-color: #344155;
-    color: blue;
+    background-color: #a5d8ff;
+    color: black;
 }
 
 
 a:hover {
-    background-color: gold;
+    background-color: #a5d8ff;
   }
