--- a/css/rank_style.css
+++ b/css/rank_style.css
@@ -125,7 +125,20 @@ a:hover {
 
 
 
+  .tt {
+    display: block;
+    color: black;
+    
+    text-decoration: none;
+                        
+                    }
+                    .tt:hover {
+                        background-color: #a5d8ff;
+                    }
 
+.titlecol3 {
+    text-align: center;
+}
 
 
 
